syntax = "proto3";

option csharp_namespace = "TaskService.Contracts";

package task.types;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message TaskDto {
  string id = 1;
  string title = 2;
  string description = 3;
  string tenant_id = 4;
  string project_id = 5;
  string board_id = 6;
  string board_column_id = 7;
  string created_by_user_id = 8;
  optional string assignee_user_id = 9;
  google.protobuf.Timestamp created_at = 10;
  optional google.protobuf.Timestamp updated_at = 11;
  repeated string tag_ids = 12;
}

message TaskCommentDto {
  string id = 1;
  string task_id = 2;
  string content = 3;
  string CreatedByUserId = 4;
  google.protobuf.Timestamp created_at = 5;
  optional google.protobuf.Timestamp updated_at = 6;
}
